<resources>
    <string name="app_name">CustomCalenderAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="weather">WEATHER</string>
    <string name="weather_report">WEATHER INFORMATION</string>
    <string name="curreny">Currency : </string>
    <string name="temp">Temp : </string>
    <string name="humidity">Humidity : </string>
    <string name="pressure">Pressure : </string>
</resources>
